--- a/public/css/app-style.css
+++ b/public/css/app-style.css
@@ -6147,3 +6147,48 @@ body .SumoSelect>.CaptionCont>label>i {
 .card-header > div > i {
     margin-right: 5px;
 }
+body .loadingi {
+    display: inline-block;
+    position: relative;
+    width: 50px;
+    height: 50px;
+    cursor: default;
+    text-shadow: none !important;
+    color: transparent !important;
+    opacity: 1;
+    pointer-events: auto;
+    -webkit-transition: all 0s linear, opacity 0.1s ease;
+    transition: all 0s linear, opacity 0.1s ease;
+}
+
+body .loadingi:after {
+    content: "";
+    box-sizing: border-box;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 20px;
+    height: 20px;
+    margin-top: -10px;
+    margin-left: -10px;
+    border-radius: 50%;
+    border: 12px solid #fff;
+    border-color: #fff transparent #fff transparent;
+    animation: loadingi 1.2s infinite;
+}
+
+@keyframes loadingi {
+    0% {
+        transform: rotate(0);
+        animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+    }
+
+    50% {
+        transform: rotate(900deg);
+        animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    }
+
+    100% {
+        transform: rotate(1800deg);
+    }
+}
